<resources>
    <string name="app_name">Couple\nInside</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="sign_in">로그인</string>
    <string name="auto_agree">회원가입과 동시에 개인정보취급방침 및 이용약관에 동의하게됩니다</string>
    <string name="sign_up">회원가입</string>
    <string name="didnt_have_id">계정이 없으신가요?</string>
    <string name="enter_password">비밀번호</string>
    <string name="find_the_password">비밀번호 찾기</string>
    <string name="enter_email">이메일</string>
    <string name="enter_nick_name">이름</string>
    <string name="signup_failed">회원가입이 실패했습니다. 다시 시도해주세요.</string>
    <string name="already_have_id">이미 계정이 있습니다.</string>
    <string name="invalid_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="invalid_nick_name">닉네임은 2글자 이상 10글자 이하로 만들어야 합니다.</string>
    <string name="invalid_password">비밀번호는 8자리 이상이어야 합니다.</string>
    <string name="plz_check_policy">개인정보 취급방침에 동의해야합니다.</string>
    <string name="existed_nick_name">이미 존재하는 이름입니다.</string>
    <string name="existed_email">이미 존재하는 이메일 입니다.</string>
    <string name="incorrect_password">비밀번호가 틀립니다.</string>
    <string name="not_existed_user">존재하지 않는 계정입니다.</string>
    <string name="plz_wait">잠시만 기다려주세요…</string>
    <string name="failed_upload">사진 업로드를 실패했습니다. 다시 시도해 주세요.</string>
    <string name="confirm">완료</string>
    <string name="enter_comment">코멘트 입력</string>
    <string name="sign_up_by_google">구글 계정으로 시작하기</string>
    <string name="welcome">환영합니다!</string>
    <string name="welcome_sub">몇 가지 질문에 대답해주시면\n당신과 어울리는 친구를 추천해드려요</string>
    <string name="profile_setting">프로필 설정</string>
    <string name="profile_setting_sub">프로필 확인 및 설정하기</string>
    <string name="nick_name">이름</string>
    <string name="area">지역</string>
    <string name="save">저장하기</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="join_chat">채팅방 입장하기</string>
    <string name="searching">탐색중…</string>
    <string name="people_interest_me">나에게 관심을 표현한 사람</string>
    <string name="people_interest_me_one">%1$s님이 당신을 관심있어 합니다. 관심에 응답해보세요.</string>
    <string name="people_interest_me_many">%1$s님 외 %2$s명이 당신을 관심있어 합니다. 관심에 응답해보세요.</string>
    <string name="do_sign_up">새로운 계정 만들기</string>
    <string name="male">남</string>
    <string name="location">지역</string>
    <string name="birth">출생년도</string>
    <string name="gender">성별</string>
    <string name="moreInfo">소개말</string>
    <string name="female">여</string>
    <string name="age">나이</string>
    <string name="start">시작하기</string>
    <string name="do_login">로그인하기</string>
    <string name="plz_check_gender">성별을 선택해주세요</string>
    <string name="selected">지정됨</string>
    <string name="plz_check_location">지역을 지정해주세요</string>
    <string name="plz_check_age">나이를 지정해주세요</string>
    <string name="plz_check_moreInfo">소개말을 작성해주세요</string>
    <string name="plz_check_profile_img">프로필 사진을 설정해주세요</string>
    <string name="find_new_lover_title">새로운 사람 찾아보기</string>
    <string name="find_new_lover_sub">마음에 드는 이성을 찾고,\n<font fgcolor='#f77f77'>관심을 표현</font> 해보세요.\n서로가 모두 관심을 표현하면\n<font fgcolor='#f77f77'>호감도 테스트</font> 단계로\n넘어갈 수 있습니다!</string>
    <string name="search_btn_text">탐색 시작하기. 행운을 빕니다!</string>
    <string name="distance_of_me">거리</string>
    <string name="chemistry_test">궁합 테스트</string>
    <string name="response_empty">아직 나에게 관심을 표현한 사람이 없습니다.</string>
    <string name="tab_to_close">[탭하고 다시보지않기]</string>
    <string name="favorability_tutorial_text">이 사람이 나와 잘 맞는 사람일까?\n<font fgcolor='#f77f77'>호감도 테스트</font>를 통하여 확인 해보세요.\n테스트를 모두 통과하면\n<font fgcolor='#f77f77'>커플 채팅방</font>에 입장하실 수 있습니다!</string>
    <string name="interest_completed">%1$s님과 서로에게 관심주기 성공!</string>
    <string name="interest_completed_sub">이제 궁합 테스트가 가능합니다.</string>
    <string name="couple_test_item_title">%1$s님 과의 테스트</string>
    <string name="ing">진행중</string>
    <string name="step_1_title">1 단계 : 사진 교환하기</string>
    <string name="show_another_photo_sub">사진 한 장을 교환합니다.\n교환한 사진이 서로 마음에 든다면\n통과 할 수 있습니다.</string>
    <string name="step_2_title">2 단계 : 목소리 확인하기</string>
    <string name="check_voice_sub">5초 미만의 짧은 음성을 통하여 목소리를 확인합니다. 서로의 목소리가 마음에 든다면 통과 할 수 있습니다.</string>
    <string name="step_3_title">3 단계 : 연애관 체크하기</string>
    <string name="qna_sub">상대방에게 궁금한 점이나 연애에서 중요하게 생각하는 부분에 대해서 질문합니다. 답변이 마음에 들면 통과 할 수 있습니다.</string>
    <string name="step_4_title">모든 단계를 완료</string>
    <string name="blind_test_sub">마지막 단계입니다. 10가지의 O/X 문답을 각각 작성합니다. 작성한 답변 10개중 5개 이상이 일치한다면 통과 할 수 있습니다. 4단계를 통과하게 되면 커플 매칭이 이루어지고 커플 채팅방에 입장 할 수 있습니다.</string>
    <string name="start_chat">채팅 시작하기</string>
    <string name="enter_message">매세지 입력</string>
    <string name="members">멤버</string>
    <string name="out_of_chat">채팅방 나가기</string>
    <string name="out_of_chat_sub">기록된 모든 대화내용이 삭제됩니다.\n정말 나가시겠습니까?</string>
    <string name="who_joined_chat">%1$s님이 채팅방에 입장하셨습니다.</string>
    <string name="who_out_of_chat">%1$s님이 채팅방을 나가셨습니다.</string>
    <string name="photo">사진</string>
    <string name="just_before">방금 전</string>
    <string name="min_before">%1$d분 전</string>
    <string name="hour_before">%1$d시간 전</string>
    <string name="couple_chat_list">커플 채팅방</string>
    <string name="last_read_here">여기까지 읽으셨습니다.</string>
    <string name="failed">실패</string>
    <string name="success">성공</string>
    <string name="me_reg_photo">교환하고 싶은 사진 한 장을 올려주세요.</string>
    <string name="you_reg_photo">아직 사진을 올리지 않았습니다. 잠시만 기다려주세요.</string>
    <string name="reg">등록하기</string>
    <string name="me_photo_waiting">상대방이 사진을 확인중입니다..</string>
    <string name="me_voice_waiting">상대방이 목소리를 확인중입니다..</string>
    <string name="me_ans_waiting">상대방이 답변을 확인중입니다..</string>
    <string name="you_check_waiting">체크리스트\n작성완료</string>
    <string name="me">나</string>
    <string name="me_photo_check">사진이 도착했습니다. 확인해보세요.</string>
    <string name="me_voice_check">목소리가 도착했습니다. 확인해보세요.</string>
    <string name="me_asw_check">답변이 도착했습니다. 확인해보세요.</string>
    <string name="like_it">좋아요:)</string>
    <string name="hate_it">별로에요:(</string>
    <string name="voice_record">목소리 녹음하기</string>
    <string name="voice_record_sub">녹음버튼을 누르고 5초간 음성을 녹음하세요</string>
    <string name="send">전송하기</string>
    <string name="reg_photo">상대방에게 사진을 보내주세요.</string>
    <string name="reg_voice">상대방에게 목소리를 녹음해주세요.</string>
    <string name="reg_ans">당신의 답변을 적어주세요.</string>
    <string name="reg_questions">체크리스트를\n작성해주세요</string>
    <string name="reg_photo_y">상대방이 사진을 등록하는 중입니다.</string>
    <string name="reg_voice_y">상대방이 목소리를 녹음하는 중입니다</string>
    <string name="reg_ans_y">상대방이 답변하는 중입니다</string>
    <string name="reg_questions_y">체크리스트를\n작성중입니다</string>
    <string name="you_like">상대방이 좋아합니다 :)</string>
    <string name="you_hate">상대방이 싫어합니다 :(</string>
    <string name="voice_hear">목소리 듣기</string>
    <string name="voice_hear_sub">재생 버튼을 누르면 목소리가 재생됩니다</string>
    <string name="favorability_check_list">연애 체크리스트</string>
    <string name="favorability_check_list_sub">체크리스트를 작성해주세요\n상대방과 5문항 이상이 일치해야 합니다</string>
    <string name="check_list_failed">체크리스트가\n5개 이상\n일치하지 않습니다</string>
    <string name="check_list_success">체크리스트가\n5개 이상\n일치합니다!</string>
    <string name="congratulation">축하합니다!</string>
    <string name="success_matching">모든 단계를 통과했습니다.\n이제 커플 채팅방에서 자유로운 대화를 나누고 관계를 발전시켜보세요.</string>
    <string name="issue">오늘의 연애 이슈</string>
    <string name="reply">답글작성</string>
    <string name="response_you">응답하기</string>
    <string name="find_new_description">내 또래, 내 주변, 내 취향의 새로운 이성을 찾아보세요.\n필터를 설정하면 더 자세한 탐색이 가능합니다.</string>
    <string name="enable_time_text">탐색이 실패하면 코인이 소모되지 않습니다.</string>
    <string name="set_filter">필터 설정</string>
    <string name="searching_sub">운명의 상대를 찾는중입니다</string>
    <string name="show_detail">자세히보기</string>
    <string name="age_limit">나이 제한</string>
    <string name="distance_limit">거리 제한</string>
    <string name="height_limit">키 제한</string>
    <string name="weight_limit">몸무게 제한</string>
    <string name="no_limit">제한없음</string>
    <string name="notification">알림</string>
    <string name="setting">환경설정</string>
    <string name="invite_friends">친구초대</string>
    <string name="copyright">Copyright 2018 CoupleInside, Inc.\nContact us at dayfly86@gmail.com</string>
    <string name="contact_us">문의하기</string>
    <string name="logout">로그아웃</string>
    <string name="copy_completed">복사되었습니다</string>
    <string name="evaluation">앱 평가하기</string>
    <string name="logout_sub">로그아웃 하시겠습니까?</string>
    <string name="noti_setting">알림설정</string>
    <string name="chat_message_noti">채팅 메세지 알림</string>
    <string name="like_noti">내 글에 좋아요 알림</string>
    <string name="interest_noti">서로 관심주기 성공 알림</string>
    <string name="chemistry_noti">캐미 확인 알림</string>
    <string name="remove_interest_list">관심목록 지우기</string>
    <string name="version">버전</string>
    <string name="delete_account">탈퇴하기</string>
    <string name="pass">패스</string>
    <string name="good_job">수고하셨습니다:)</string>
    <string name="retry">재도전 신청하기</string>
    <string name="sorry_data_load_failed">죄송합니다:(\n정보를 찾지 못했습니다.</string>
    <string name="photo_alert">※ 혐오/음란/비방 컨텐츠 유포시 법적인 처벌을 받을 수 있습니다.</string>
    <string name="progress">진행상황</string>
    <string name="quest">퀘스트</string>
    <string name="total_progress">진행상황</string>
    <string name="check">확인하기</string>
    <string name="privacy">개인정보처리방침</string>
    <string name="sorry">실패했습니다</string>
    <string name="failed_matching">커플 매칭에 실패하셨습니다. 재도전을 신청하시려면 아래 버튼을 눌러주세요. 상대방이 재도전을 수락하면 테스트가 다시 진행됩니다.</string>
    <string name="profile_status">프로필 설정단계 : 기본\n프로필 설정 단계를 높이면 매칭 성공률을 더 높일 수 있습니다.</string>
    <string name="charge_coin">코인충전</string>
    <string name="coin">코인</string>
    <string name="current_coin">현재 보유 코인</string>
    <string name="coin_10">10코인 충전</string>
    <string name="retry_again">다시 시도해주세요</string>
    <string name="charged_coin">코인이 충전되었습니다</string>
    <string name="coin_100">100코인 충전</string>
    <string name="coin_50">50코인 충전</string>
</resources>
