<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLy"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_menu_bar_height"
            android:background="@color/backgroundAlpha">

            <TextView
                style="@style/TitleText"
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_setting"
                android:layout_gravity="center"/>
        </FrameLayout>

        <android.support.v4.widget.CircleImageView
            android:id="@+id/profileImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/big_margin"
            android:layout_gravity="center"
            android:src="@drawable/img_default_profile"/>

        <LinearLayout
            android:layout_margin="@dimen/big_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                style="@style/NormalSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick_name"/>

            <EditText
                android:id="@+id/nickNameEdit"
                android:layout_marginLeft="80dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="haha"
                android:hint="@string/enter_nick_name"/>

        </LinearLayout>

        <TextView
            style="@style/NormalSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_margin="@dimen/big_margin"/>

        <TextView
            style="@style/NormalSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_margin="@dimen/big_margin"/>

        <TextView
            style="@style/NormalSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:layout_margin="@dimen/big_margin"/>

    </LinearLayout>

    <TextView
        style="@style/button"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        android:text="@string/save"/>

</FrameLayout>